@@ -30,9 +30,9 @@ zfs="true"		#Check ZFS pool status (Healthy, degraded or offline)
 ntfy_actions="true"	#Get action buttons on ntfy (only for cpu%, ram% and load), requires ntfy_action_* credentials to be set. Requires read-write permission on the ntfy user
 
 #Thresholds at which to warn
-load_5m_threshold=5.01  # How much load before warning (Supported formats: X, X.X, X.XX)
-load_10m_threshold=7.1 # How much load before warning (Supported formats: X, X.X, X.XX)
-load_15m_threshold=9 # How much load before warning (Supported formats: X, X.X, X.XX)
+load_5m_threshold=0  #4 How much load before warning (Supported formats: X, X.X, X.XX)
+load_10m_threshold=7 # How much load before warning (Supported formats: X, X.X, X.XX)
+load_15m_threshold=8 # How much load before warning (Supported formats: X, X.X, X.XX)
 cpu_usage_threshold=85	# CPU usage % limit before warning (No decimal support yet)
 ram_usage_threshold=90	# Ram usage limit in % before warning (No decimal support yet)
 #Disk usage thresholds
